Source/WebKit2/NetworkProcess/NetworkSession.h
@@ -53,6 +53,7 @@ public:
     NetworkSession(Type, WebCore::SessionID, CustomProtocolManager*);
     ~NetworkSession();
 
+    static void setCustomProtocolManager(CustomProtocolManager*);
     static NetworkSession& defaultSession();
     void clearCredentials();
 
